SimpleComic draws using layers. Mock Simple Comic now does, too.

--- a/MockSimpleComic/Base.lproj/MainMenu.xib
+++ b/MockSimpleComic/Base.lproj/MainMenu.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="20037" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="20037"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,8 +15,8 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
-                <outlet property="page" destination="JP2-gS-zAU" id="Dki-lG-78R"/>
-                <outlet property="scroll" destination="QlR-xg-RN6" id="CiT-iy-mty"/>
+                <outlet property="ocrView" destination="9XN-Xg-pfL" id="MQd-kT-3Cb"/>
+                <outlet property="scroll" destination="oVA-4n-NAs" id="BWq-Ii-nGz"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -409,41 +410,37 @@
         <window title="MockSimpleComic" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" tabbingMode="disallowed" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="480" height="360"/>
+            <rect key="contentRect" x="335" y="390" width="802" height="522"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1415"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
+                <rect key="frame" x="0.0" y="0.0" width="802" height="522"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" allowsMagnification="YES" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QlR-xg-RN6">
-                        <rect key="frame" x="-1" y="-1" width="482" height="362"/>
+                    <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVA-4n-NAs">
+                        <rect key="frame" x="-1" y="-1" width="804" height="524"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <clipView key="contentView" id="IEn-WZ-7f3">
-                            <rect key="frame" x="1" y="1" width="465" height="345"/>
+                        <clipView key="contentView" id="9j2-sb-v5q">
+                            <rect key="frame" x="1" y="1" width="787" height="507"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JP2-gS-zAU">
-                                    <rect key="frame" x="0.0" y="5" width="460" height="340"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="topLeft" image="test" id="PRU-t3-bDr"/>
-                                </imageView>
+                                <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9XN-Xg-pfL" customClass="SimpleImagePageView">
+                                    <rect key="frame" x="0.0" y="0.0" width="773" height="487"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </customView>
                             </subviews>
                         </clipView>
-                        <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="p1c-sh-oau">
-                            <rect key="frame" x="1" y="346" width="465" height="15"/>
+                        <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="Cqd-5o-sNH">
+                            <rect key="frame" x="1" y="508" width="787" height="15"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="KUh-ao-zZg">
-                            <rect key="frame" x="466" y="1" width="15" height="345"/>
+                        <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="VEq-wq-7mw">
+                            <rect key="frame" x="788" y="1" width="15" height="507"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
                 </subviews>
             </view>
-            <point key="canvasLocation" x="200" y="400"/>
+            <point key="canvasLocation" x="270" y="444"/>
         </window>
     </objects>
-    <resources>
-        <image name="test" width="477.1199951171875" height="733.44000244140625"/>
-    </resources>
 </document>
